fixed js formating and canvas autosizing

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <title> </title>
         <link rel="stylesheet" type="text/css" href="text.css">
-        <!-- <script src="animation.js"></script> -->
+        <script src="animation.js"></script>
 
         <nav id="navbar">
             <a href="word.html"> throw words in the void</a>
