--- a/word.html
+++ b/word.html
@@ -9,7 +9,7 @@
         <nav>
             <a href="index.html">start</a>
         </nav>
-        <section id="input-section"><input type="text" id="input"></section>
+
     </head>
     <body>
 
@@ -33,6 +33,9 @@
         <canvas width="480" height="580">
             Ihr browser unterstützt das canvas element nicht.
         </canvas>
+        <section id="input-section">
+            <input type="text" id="input">
+        </section>
         <script src="animation.js"></script>
 
     </body>
