added basic animation

--- a/word.html
+++ b/word.html
@@ -8,28 +8,29 @@
 
         <nav>
             <a href="index.html">start</a>
+            <!-- <section id="player">
+                <audio id="audioplayer" controls
+                    autoplay
+                    loop>
+                    <source
+                        src="myNoise_SLEEPINGDRAGON_35353535353535353535_0_10.mp3"
+                        type="audio/mpeg">
+                    <a href="https://mynoise.net/radios.php?r=sirensongs">your
+                        browser doesn't support the audio tag, here is an
+                        alternative</a>
+                </audio>
+                 <iframe width="560" height="50" id = "audioplayer"
+                    src="https://www.youtube.com/embed/BJ2QbySTPuY" title="YouTube
+                    video player" frameborder="0" allow="accelerometer; autoplay;
+                    clipboard-write; encrypted-media; gyroscope;
+                    picture-in-picture"></iframe>
+            </section> -->
         </nav>
 
     </head>
+
     <body>
 
-        <section id="player">
-            <audio id="audioplayer" controls
-                autoplay
-                loop>
-                <source
-                    src="myNoise_SLEEPINGDRAGON_35353535353535353535_0_10.mp3"
-                    type="audio/mpeg">
-                <a href="https://mynoise.net/radios.php?r=sirensongs">your
-                    browser doesn't support the audio tag, here is an
-                    alternative</a>
-            </audio>
-            <!-- <iframe width="560" height="50" id = "audioplayer"
-                src="https://www.youtube.com/embed/BJ2QbySTPuY" title="YouTube
-                video player" frameborder="0" allow="accelerometer; autoplay;
-                clipboard-write; encrypted-media; gyroscope;
-                picture-in-picture"></iframe> -->
-        </section>
         <canvas width="480" height="580">
             Ihr browser unterstützt das canvas element nicht.
         </canvas>
