changed background on the words part and startpage

--- a/index.html
+++ b/index.html
@@ -3,15 +3,23 @@
     <head>
         <meta charset="utf-8">
 
-        <title> </title>
-        <link rel="stylesheet" type="text/css" href="text.css">
-        <script src="animation.js"></script>
+        <title>Start</title>
+        <link rel="stylesheet" type="text/css" href="tetris.css">
+
 
         <nav id="navbar">
             <a href="word.html"> throw words in the void</a>
         </nav>
     </head>
     <body>
-
+        <p>This website is meant to help sort throughts and get rid of things on
+            your mind by typing them out and watching them dissapear</p>
+        <canvas width="320" height="640" id="game">Ihr browser unterstützt das
+            canvas element nicht.
+        </canvas>
+        <p>
+            if you want to write some words that dissapear into nothing click
+            here<br>
+            <button> watch them dissapear in the sky</a></p>
     </body>
 </html>
