--- a/word.html
+++ b/word.html
@@ -6,7 +6,7 @@
         <title>throw words into the void</title>
         <link rel="stylesheet" type="text/css" href="text.css">
 
-        <nav>
+        <nav id="navbar">
             <a href="index.html">start</a>
             <!-- <section id="player">
                 <audio id="audioplayer" controls
