changed background added particles page

--- a/index.html
+++ b/index.html
@@ -4,22 +4,24 @@
         <meta charset="utf-8">
 
         <title>Start</title>
-        <link rel="stylesheet" type="text/css" href="tetris.css">
+        <link rel="stylesheet" type="text/css" href="start.css">
 
 
         <nav id="navbar">
             <a href="word.html"> throw words in the void</a>
+            <a href="particle.html"> watch them disperse</a>
         </nav>
     </head>
     <body>
         <p>This website is meant to help sort throughts and get rid of things on
             your mind by typing them out and watching them dissapear</p>
-        <canvas width="320" height="640" id="game">Ihr browser unterstützt das
-            canvas element nicht.
-        </canvas>
         <p>
             if you want to write some words that dissapear into nothing click
             here<br>
-            <button> watch them dissapear in the sky</a></p>
-    </body>
-</html>
+            <a href="word.html"> throw words in the void</a>
+            <br>
+            or here for watching the thoughts to disintegrate
+            <br>
+            <a href="particle.html"> watch them disperse</a>
+        </body>
+    </html>
