--- a/word.html
+++ b/word.html
@@ -8,6 +8,7 @@
 
         <nav id="navbar">
             <a href="index.html">start</a>
+            <a href="particle.html">float away</a>
             <!-- <section id="player">
                 <audio id="audioplayer" controls
                     autoplay
