changed rezize and font size

--- a/word.html
+++ b/word.html
@@ -8,31 +8,16 @@
 
         <nav id="navbar">
             <a href="index.html">start</a>
-            <a href="particle.html">float away</a>
-            <!-- <section id="player">
-                <audio id="audioplayer" controls
-                    autoplay
-                    loop>
-                    <source
-                        src="myNoise_SLEEPINGDRAGON_35353535353535353535_0_10.mp3"
-                        type="audio/mpeg">
-                    <a href="https://mynoise.net/radios.php?r=sirensongs">your
-                        browser doesn't support the audio tag, here is an
-                        alternative</a>
-                </audio>
-                 <iframe width="560" height="50" id = "audioplayer"
-                    src="https://www.youtube.com/embed/BJ2QbySTPuY" title="YouTube
-                    video player" frameborder="0" allow="accelerometer; autoplay;
-                    clipboard-write; encrypted-media; gyroscope;
-                    picture-in-picture"></iframe>
-            </section> -->
+            <a href="particle.html" id="fly">float away</a>
         </nav>
 
     </head>
 
     <body>
 
-        <canvas width="480" height="580">
+        <canvas width="480" height="580" alt="canvas element that animates the
+            text by the user in a way that it moves over the screen and gets
+            more transparent as it moves">
             Ihr browser unterstützt das canvas element nicht.
         </canvas>
         <section id="input-section">
