--- a/word.html
+++ b/word.html
@@ -2,7 +2,8 @@
 <html lang="de">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="device-width" user-scalable="no">
+        <meta name="viewport" content="device-width" initial-scale="1"
+            maximum-scale="1" user-scalable="no">
         <title>throw words into the void</title>
         <link rel="stylesheet" type="text/css" href="text.css">
 
