moved around some stuff changes formatting

--- a/word.html
+++ b/word.html
@@ -6,10 +6,8 @@
             maximum-scale="1" user-scalable="no">
         <title>throw words into the void</title>
         <link rel="stylesheet" type="text/css" href="text.css">
-
         <nav id="navbar">
-            <a href="index.html">start</a>
-            <a href="particle.html" id="fly">float away</a>
+            <a href="index.html" id="start">start</a>
         </nav>
 
     </head>
