changed index text

--- a/index.html
+++ b/index.html
@@ -11,12 +11,20 @@
         </nav>
     </head>
     <body>
-        <p>This website is meant to help sort throughts and get rid of things on
-            your mind by typing them out and watching them dissapear</p>
+        <p>
+            This website is meant to help sort throughts and get rid of things
+            on your mind by typing them out and watching them dissapear
+        </p>
+        <p>
+            each time you type anything and watch it dissapear a new star
+            appears in the sky
+        </p>
         <p>
             if you want to write some words that dissapear into nothing click
-            here<br>
-            <a href="word.html"> throw words in the void</a>
+            <br>
+            <a href="word.html">here</a>
+            <br>
+            or use the button at the top
         </p>
 
     </body>
